--- a/contacts.html
+++ b/contacts.html
@@ -236,6 +236,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCe3qqAJYl_sP906Vu8iB_FsmLMj0wcGU"></script>
   <script src="./js/main.js"></script>
+  <script src="./js/map.js"></script>
 
   </body>
 </html>
