mobile version fixed

--- a/index.html
+++ b/index.html
@@ -24,25 +24,28 @@
         <div class="nav-wrapper">
           <div class="row">
 
-            <div class="col m2 s12 logo-container">
+            <div class="col m2 s7 logo-container">
               <a id="logo-container" href="#" class="brand-logo"><img src="./logo.png" class="logo" alt="" /></a>
             </div>
 
-            <div class="col m2 s12">
+
+            <div class="col m2 s12 hide-on-small-and-down">
               <div class="phone-wrapper">
                 <p>+38(098) 111 11 11</p>
                 <p>+38(098) 222 22 22</p>
               </div>
             </div>
 
-            <div class="col m2 s12">
+            <div class="col m2 s3">
               <div class="lang-wrapper">
                 <a class="active" href="#">ua</a>
                 <a  href="#">ru</a>
               </div>
             </div>
 
-            <div class="col m6 s12">
+            <a href="#" data-activates="mobile-demo" style="margin-top: 32px; color: #404040;" class="right button-collapse hide-on-med-and-up"><i class="material-icons">menu</i></a>
+
+            <div class="col m6 s12 hide-on-med-and-down">
               <div class="tab-wrapper">
                 <ul class="tabs">
                   <li class="tab col s2"><a target="_self" href="./index.html" class="active">Главная</a></li>
@@ -54,11 +57,21 @@
                 </ul>
               </div>
             </div>
+            <ul class="side-nav" id="mobile-demo">
+              <li><a target="_self" href="./index.html" class="active">Главная</a></li>
+              <li><a target="_self" href="./tech.html">Техника</a></li>
+              <li><a target="_self" href="./about.html">О нас</a></li>
+              <li><a target="_self" href="./service.html">Сервис</a></li>
+              <li><a target="_self" href="./parts.html">Запчасти</a></li>
+              <li><a target="_self" href="./contacts.html">Контакты</a></li>
+              <li>
+                <div class="phone-wrapper-mobile">
+                  <p>+38(098) 111 11 11</p>
+                  <p>+38(098) 222 22 22</p>
+                </div>
+              </li>
+            </ul>
           </div>
-
-          <!-- <ul id="nav-mobile" class="right side-nav">
-          <li><a href="#">Navbar Link</a></li>
-        </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a> -->
       </div>
     </div>
   <!-- </nav> -->
@@ -499,23 +512,23 @@
         <div class="col m3 hide-on-small-only">
         </div>
 
-        <div class="col m1 s2">
-          <a href="#">Главная</a>
+        <div class="col m1 s12">
+          <a href="./index.html">Главная</a>
         </div>
-        <div class="col m1 s2">
-          <a href="#">Техника</a>
+        <div class="col m1 s12">
+          <a href="./index.html">Техника</a>
         </div>
-        <div class="col m1 s2">
-          <a href="#">О нас</a>
+        <div class="col m1 s12">
+          <a href="./about.html">О нас</a>
         </div>
-        <div class="col m1 s2">
-          <a href="#">Сервис</a>
+        <div class="col m1 s12">
+          <a href="./service.html">Сервис</a>
         </div>
-        <div class="col m1 s2">
-          <a href="#">Запчасти</a>
+        <div class="col m1 s12">
+          <a href="./parts.html">Запчасти</a>
         </div>
-        <div class="col m1 s2">
-          <a href="#">Контакты</a>
+        <div class="col m1 s12">
+          <a href="./contacts.html">Контакты</a>
         </div>
 
         <div class="col m3 hide-on-small-only">
@@ -537,9 +550,6 @@
     </div>
   </footer>
 
-
-  <!--  Scripts-->
-  <!-- <script src="js/all.js"></script> -->
 
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCe3qqAJYl_sP906Vu8iB_FsmLMj0wcGU"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
