mobile version fixed

--- a/about.html
+++ b/about.html
@@ -58,9 +58,9 @@
               </div>
             </div>
             <ul class="side-nav" id="mobile-demo">
-              <li><a target="_self" href="./index.html" class="active">Главная</a></li>
+              <li><a target="_self" href="./index.html">Главная</a></li>
               <li><a target="_self" href="./tech.html">Техника</a></li>
-              <li><a target="_self" href="./about.html">О нас</a></li>
+              <li><a target="_self" href="./about.html" class="active">О нас</a></li>
               <li><a target="_self" href="./service.html">Сервис</a></li>
               <li><a target="_self" href="./parts.html">Запчасти</a></li>
               <li><a target="_self" href="./contacts.html">Контакты</a></li>
