--- a/contacts.html
+++ b/contacts.html
@@ -58,12 +58,12 @@
               </div>
             </div>
             <ul class="side-nav" id="mobile-demo">
-              <li><a target="_self" href="./index.html" class="active">Главная</a></li>
+              <li><a target="_self" href="./index.html">Главная</a></li>
               <li><a target="_self" href="./tech.html">Техника</a></li>
               <li><a target="_self" href="./about.html">О нас</a></li>
               <li><a target="_self" href="./service.html">Сервис</a></li>
               <li><a target="_self" href="./parts.html">Запчасти</a></li>
-              <li><a target="_self" href="./contacts.html">Контакты</a></li>
+              <li><a target="_self" href="./contacts.html" class="active">Контакты</a></li>
               <li>
                 <div class="phone-wrapper-mobile">
                   <p>+38(098) 111 11 11</p>
