--- a/parts.html
+++ b/parts.html
@@ -58,11 +58,11 @@
               </div>
             </div>
             <ul class="side-nav" id="mobile-demo">
-              <li><a target="_self" href="./index.html" class="active">Главная</a></li>
+              <li><a target="_self" href="./index.html">Главная</a></li>
               <li><a target="_self" href="./tech.html">Техника</a></li>
               <li><a target="_self" href="./about.html">О нас</a></li>
               <li><a target="_self" href="./service.html">Сервис</a></li>
-              <li><a target="_self" href="./parts.html">Запчасти</a></li>
+              <li><a target="_self" href="./parts.html" class="active">Запчасти</a></li>
               <li><a target="_self" href="./contacts.html">Контакты</a></li>
               <li>
                 <div class="phone-wrapper-mobile">
