--- a/tech.html
+++ b/tech.html
@@ -58,8 +58,8 @@
               </div>
             </div>
             <ul class="side-nav" id="mobile-demo">
-              <li><a target="_self" href="./index.html" class="active">Главная</a></li>
-              <li><a target="_self" href="./tech.html">Техника</a></li>
+              <li><a target="_self" href="./index.html">Главная</a></li>
+              <li><a target="_self" href="./tech.html" class="active">Техника</a></li>
               <li><a target="_self" href="./about.html">О нас</a></li>
               <li><a target="_self" href="./service.html">Сервис</a></li>
               <li><a target="_self" href="./parts.html">Запчасти</a></li>
