mobile version fixed

--- a/about.html
+++ b/about.html
@@ -58,18 +58,21 @@
               </div>
             </div>
             <ul class="side-nav" id="mobile-demo">
-              <li><a target="_self" href="./index.html">Главная</a></li>
-              <li><a target="_self" href="./tech.html">Техника</a></li>
-              <li><a target="_self" href="./about.html" class="active">О нас</a></li>
-              <li><a target="_self" href="./service.html">Сервис</a></li>
-              <li><a target="_self" href="./parts.html">Запчасти</a></li>
-              <li><a target="_self" href="./contacts.html">Контакты</a></li>
-              <li>
-                <div class="phone-wrapper-mobile">
-                  <p>+38(098) 111 11 11</p>
-                  <p>+38(098) 222 22 22</p>
-                </div>
-              </li>
+              <div class="mobile-navigation-holder">
+
+                <li><a target="_self" href="./index.html">Главная</a></li>
+                <li><a target="_self" href="./tech.html">Техника</a></li>
+                <li><a target="_self" href="./about.html" class="active">О нас</a></li>
+                <li><a target="_self" href="./service.html">Сервис</a></li>
+                <li><a target="_self" href="./parts.html">Запчасти</a></li>
+                <li><a target="_self" href="./contacts.html">Контакты</a></li>
+                <li>
+                  <div class="phone-wrapper-mobile">
+                    <p>+38(098) 111 11 11</p>
+                    <p>+38(098) 222 22 22</p>
+                  </div>
+                </li>
+              </div>
             </ul>
           </div>
       </div>
