--- a/detailes.html
+++ b/detailes.html
@@ -185,7 +185,7 @@
                 <p>
                   Ukraine, Kyiv, Street
                 </p>
-                <a href="#">Смотреть на карте</a>
+                <a class="to-map" href="#">Смотреть на карте</a>
               </div>
             </div>
 
