--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="./css/main.css" media="screen" title="no title">
   <link rel="stylesheet" href="./css/about-us.css" media="screen" title="no title">
   <link rel="stylesheet" href="./css/footer.css" media="screen" title="no title">
+  <link type="text/css" rel="stylesheet" href="./css/lightslider.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 </head>
 <body>
@@ -89,7 +90,7 @@
   </section>
 
   <section>
-    <div class="logo-list">
+    <!-- <div class="logo-list">
       <div class="container">
         <div class="row">
           <div class="col m1 hide-on-small-only logo-operate-icon"  style="text-align: right;">
@@ -124,7 +125,53 @@
           </div>
         </div>
       </div>
+    </div> -->
+    <div class="logo-list">
+      <div class="container">
+        <div class="row">
+
+          <ul id="autoWidth" class="cs-hidden">
+            <li class="link-holder">
+              <a href="#" class="logo-link agri"></a>
+            </li>
+            <li class="link-holder">
+              <a href="#" class="logo-link sms"></a>
+            </li>
+            <li class="link-holder">
+              <a href="#" class="logo-link lambo"></a>
+            </li>
+            <li class="link-holder">
+              <a href="#" class="logo-link sms"></a>
+            </li>
+            <li class="link-holder">
+              <a href="#" class="logo-link sulky"></a>
+            </li>
+            <li class="link-holder">
+              <a href="#" class="logo-link sms"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
     </div>
+
+    <!-- <ul id="autoWidth" class="cs-hidden">
+      <li class="item-d"><div class="blueBox">
+1
+      </div></li>
+      <li class="item-d"><div class="blueBox">
+2
+      </div></li>
+      <li class="item-d"><div class="blueBox">
+3
+      </div></li>
+      <li class="item-d"><div class="blueBox">
+4
+      </div></li>
+      <li class="item-d"><div class="blueBox">
+5
+      </div></li>
+    </ul> -->
   </section>
 
   <main>
@@ -557,6 +604,7 @@
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCe3qqAJYl_sP906Vu8iB_FsmLMj0wcGU"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="./js/lightslider.js"></script>
   <script src="./js/main.js"></script>
 
   </body>
