--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
   <link rel="stylesheet" href="./css/main.css" media="screen" title="no title">
   <link rel="stylesheet" href="./css/about-us.css" media="screen" title="no title">
   <link rel="stylesheet" href="./css/footer.css" media="screen" title="no title">
-  <link type="text/css" rel="stylesheet" href="./css/lightslider.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <!-- /*<style>*/ -->
+
+  <!-- </style> -->
+
 </head>
 <body>
   <div class="header">
@@ -90,88 +93,47 @@
   </section>
 
   <section>
-    <!-- <div class="logo-list">
-      <div class="container">
-        <div class="row">
-          <div class="col m1 hide-on-small-only logo-operate-icon"  style="text-align: right;">
-            <a href="#"><i class="material-icons">keyboard_arrow_left</i></a>
-          </div>
-
-          <div class="col m10 s12">
-            <div class="container-fluid">
-
-              <div class="row link-holder-wrapper">
-                <div class="col m3 s12 link-holder">
-                  <a href="#" class="logo-link agri"></a>
-                </div>
-
-                <div class="col m3 s12 link-holder">
-                  <a href="#" class="logo-link sms"></a>
-                </div>
-
-                <div class="col m3 s12 link-holder">
-                  <a href="#" class="logo-link lambo"></a>
-                </div>
-
-                <div class="col m3 s12 link-holder">
-                  <a href="#" class="logo-link sulky"></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col m1 hide-on-small-only logo-operate-icon">
-            <a href="#"><i class="material-icons">keyboard_arrow_right</i></a>
-          </div>
-        </div>
-      </div>
-    </div> -->
     <div class="logo-list">
       <div class="container">
         <div class="row">
 
-          <ul id="autoWidth" class="cs-hidden">
-            <li class="link-holder">
-              <a href="#" class="logo-link agri"></a>
-            </li>
-            <li class="link-holder">
-              <a href="#" class="logo-link sms"></a>
-            </li>
-            <li class="link-holder">
-              <a href="#" class="logo-link lambo"></a>
-            </li>
-            <li class="link-holder">
-              <a href="#" class="logo-link sms"></a>
-            </li>
-            <li class="link-holder">
-              <a href="#" class="logo-link sulky"></a>
-            </li>
-            <li class="link-holder">
-              <a href="#" class="logo-link sms"></a>
-            </li>
-          </ul>
+          <div id="mixedSlider">
+            <div class="MS-content">
+                <div class="item">
+                    <div class="link-holder">
+                      <a href="#" class="logo-link agri"></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="link-holder">
+                      <a href="#" class="logo-link sms"></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="link-holder">
+                      <a href="#" class="logo-link lambo"></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="link-holder">
+                      <a href="#" class="logo-link sulky"></a>
+                    </div>
+                </div>
+
+
+              </div>
+              <div class="MS-controls">
+                  <button class="MS-left"></button>
+                  <button class="MS-right"></button>
+              </div>
+          </div>
+        </div>
+
         </div>
       </div>
 
     </div>
 
-    <!-- <ul id="autoWidth" class="cs-hidden">
-      <li class="item-d"><div class="blueBox">
-1
-      </div></li>
-      <li class="item-d"><div class="blueBox">
-2
-      </div></li>
-      <li class="item-d"><div class="blueBox">
-3
-      </div></li>
-      <li class="item-d"><div class="blueBox">
-4
-      </div></li>
-      <li class="item-d"><div class="blueBox">
-5
-      </div></li>
-    </ul> -->
   </section>
 
   <main>
@@ -604,7 +566,7 @@
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCe3qqAJYl_sP906Vu8iB_FsmLMj0wcGU"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <script src="./js/lightslider.js"></script>
+  <script src="./js/multislider.js"></script>
   <script src="./js/main.js"></script>
 
   </body>
