--- a/parts.html
+++ b/parts.html
@@ -93,39 +93,44 @@
     <div class="logo-list">
       <div class="container">
         <div class="row">
-          <div class="col m1 hide-on-small-only logo-operate-icon"  style="text-align: right;">
-            <a href="#"><i class="material-icons">keyboard_arrow_left</i></a>
-          </div>
 
-          <div class="col m10 s12">
-            <div class="container-fluid">
-
-              <div class="row link-holder-wrapper">
-                <div class="col m3 s12 link-holder">
-                  <a href="#" class="logo-link agri"></a>
+          <div id="mixedSlider">
+            <div class="MS-content">
+                <div class="item">
+                    <div class="link-holder">
+                      <a href="#" class="logo-link agri"></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="link-holder">
+                      <a href="#" class="logo-link sms"></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="link-holder">
+                      <a href="#" class="logo-link lambo"></a>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="link-holder">
+                      <a href="#" class="logo-link sulky"></a>
+                    </div>
                 </div>
 
-                <div class="col m3 s12 link-holder">
-                  <a href="#" class="logo-link sms"></a>
-                </div>
 
-                <div class="col m3 s12 link-holder">
-                  <a href="#" class="logo-link lambo"></a>
-                </div>
-
-                <div class="col m3 s12 link-holder">
-                  <a href="#" class="logo-link sulky"></a>
-                </div>
               </div>
-            </div>
-          </div>
-
-          <div class="col m1 hide-on-small-only logo-operate-icon">
-            <a href="#"><i class="material-icons">keyboard_arrow_right</i></a>
+              <div class="MS-controls">
+                  <button class="MS-left"></button>
+                  <button class="MS-right"></button>
+              </div>
           </div>
         </div>
+
+        </div>
       </div>
+
     </div>
+
   </section>
 
   <main>
@@ -303,6 +308,7 @@
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCe3qqAJYl_sP906Vu8iB_FsmLMj0wcGU"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="./js/multislider.js"></script>
   <script src="./js/main.js"></script>
 
   </body>
