--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         <div class="nav-wrapper">
           <div class="row">
 
-            <div class="col m2 s7 logo-container">
+            <div class="col l2 m4 s7 logo-container">
               <a id="logo-container" href="#" class="brand-logo"><img src="./logo.png" class="logo" alt="" /></a>
             </div>
 
 
-            <div class="col m2 s12 hide-on-small-and-down">
+            <div class="col l2 m4 s12 hide-on-small-and-down">
               <div class="phone-wrapper">
                 <p>+38(098) 111 11 11</p>
                 <p>+38(098) 222 22 22</p>
               </div>
             </div>
 
-            <div class="col m2 s3">
+            <div class="col l2 m4 s3">
               <div class="lang-wrapper">
                 <a class="active" href="#">ua</a>
                 <a  href="#">ru</a>
@@ -49,7 +49,7 @@
 
             <a href="#" data-activates="mobile-demo" style="margin-top: 32px; color: #404040;" class="right button-collapse hide-on-med-and-up"><i class="material-icons">menu</i></a>
 
-            <div class="col m6 s12 hide-on-med-and-down">
+            <div class="col m12 l6 s12 hide-on-small-and-down">
               <div class="tab-wrapper">
                 <ul class="tabs">
                   <li class="tab col s2"><a target="_self" href="./index.html" class="active">Главная</a></li>
