--- a/about.html
+++ b/about.html
@@ -29,23 +29,23 @@
             </div>
 
 
-            <div class="col l2 m4 s12 hide-on-small-and-down">
+            <div class="col l2 m4 s12 hide-on-med-and-down">
               <div class="phone-wrapper">
                 <p>+38(098) 111 11 11</p>
                 <p>+38(098) 222 22 22</p>
               </div>
             </div>
 
-            <div class="col l2 m4 s3">
+            <div class="col l2 m4 offset-m4 s3">
               <div class="lang-wrapper">
                 <a class="active" href="#">ua</a>
                 <a  href="#">ru</a>
               </div>
             </div>
 
-            <a href="#" data-activates="mobile-demo" style="margin-top: 32px; color: #404040;" class="right button-collapse hide-on-med-and-up"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="mobile-demo" style=" position: absolute; right: 15px; top: 32px; color: #404040;" class="right button-collapse hide-on-large-only"><i class="material-icons">menu</i></a>
 
-            <div class="col m12 l6 s12 hide-on-small-and-down">
+            <div class="col m12 l6 s12 hide-on-med-and-down">
               <div class="tab-wrapper">
                 <ul class="tabs">
                   <li class="tab col s2"><a target="_self" href="./index.html">Главная</a></li>
@@ -262,23 +262,23 @@
         <div class="col m3 hide-on-small-only">
         </div>
 
-        <div class="col m1 s2">
-          <a href="#">Главная</a>
+        <div class="col m1 s12">
+          <a href="./index.html">Главная</a>
         </div>
-        <div class="col m1 s2">
-          <a href="#">Техника</a>
+        <div class="col m1 s12">
+          <a href="./index.html">Техника</a>
         </div>
-        <div class="col m1 s2">
-          <a href="#">О нас</a>
+        <div class="col m1 s12">
+          <a href="./about.html">О нас</a>
         </div>
-        <div class="col m1 s2">
-          <a href="#">Сервис</a>
+        <div class="col m1 s12">
+          <a href="./service.html">Сервис</a>
         </div>
-        <div class="col m1 s2">
-          <a href="#">Запчасти</a>
+        <div class="col m1 s12">
+          <a href="./parts.html">Запчасти</a>
         </div>
-        <div class="col m1 s2">
-          <a href="#">Контакты</a>
+        <div class="col m1 s12">
+          <a href="./contacts.html">Контакты</a>
         </div>
 
         <div class="col m3 hide-on-small-only">
