--- a/detailes.html
+++ b/detailes.html
@@ -37,16 +37,16 @@
               </div>
             </div>
 
-            <div class="col l2 m4 offset-m4 s3">
+            <div class="col l2 m4 s3 lang">
               <div class="lang-wrapper">
                 <a class="active" href="#">ua</a>
                 <a  href="#">ru</a>
               </div>
             </div>
 
-            <a href="#" data-activates="mobile-demo" style=" position: absolute; right: 15px; top: 32px; color: #404040;" class="right button-collapse hide-on-large-only"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="mobile-demo" style=" position: absolute; right: 15px; top: 32px; color: #404040;" class="burger right button-collapse"><i class="material-icons">menu</i></a>
 
-            <div class="col m12 l6 s12 hide-on-med-and-down">
+            <div class="col m12 l6 s12 top-nav">
               <div class="tab-wrapper">
                 <ul class="tabs">
                   <li class="tab col s2"><a target="_self" href="./index.html" class="active">Главная</a></li>
@@ -390,7 +390,7 @@
       </p>
     </div>
   </footer>
-  
+
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   <script src="./js/multislider.js"></script>
