--- a/tech.html
+++ b/tech.html
@@ -36,16 +36,16 @@
               </div>
             </div>
 
-            <div class="col l2 m4 offset-m4 s3">
+            <div class="col l2 m4 s3 lang">
               <div class="lang-wrapper">
                 <a class="active" href="#">ua</a>
                 <a  href="#">ru</a>
               </div>
             </div>
 
-            <a href="#" data-activates="mobile-demo" style=" position: absolute; right: 15px; top: 32px; color: #404040;" class="right button-collapse hide-on-large-only"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="mobile-demo" style=" position: absolute; right: 15px; top: 32px; color: #404040;" class="burger right button-collapse"><i class="material-icons">menu</i></a>
 
-            <div class="col m12 l6 s12 hide-on-med-and-down">
+            <div class="col m12 l6 s12 top-nav">
               <div class="tab-wrapper">
                 <ul class="tabs">
                   <li class="tab col s2"><a target="_self" href="./index.html">Главная</a></li>
